@@ -1,5 +1,10 @@
 2006-07-27  A Balamurugan  <bala@zresearch.com>
 
+	* ipmi-locate/src/ipmi-locate.c (display_ipmi_locate_info):
+	displays 'DMIDECODE' locate_driver_type.
+
+2006-07-27  A Balamurugan  <bala@zresearch.com>
+
 	* bmc-config/bmc-config.8.pre.in: removed unclosed double quote.
 
 	* ipmi-locate/src/ipmi-locate.c: Fixed bug in return value check
